--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,3 +1,4 @@
+= render :file => File.join("#{Rails.root}/app/assets/templates", "folders", "folders-template")
 = render :file => File.join("#{Rails.root}/app/assets/templates", "uploader", "uploader-template")
 
 .container
